add rouneded to img nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-lg px-4 px-lg-5 bg-brown-mode">
                   <a class="navbar-brand text-uppercase d-flex align-items-center" href="#">
                     <h1 class="fs-5 m-0">
-                    <img src="./img/bookstore.jpg" alt="Logo" width="130" height="70" class="d-inline-block">
+                    <img src="./img/bookstore.jpg" alt="Logo" width="130" height="70" class="d-inline-block rounded-2">
                     House Of Books</h1>
                 </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
