change text in the last a tag in footer

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                   designed By <a class="a_footerbottom" href="#">bookhouse team</a>
-                  <br>Lorem ipsum By:
-                  <a class="a_footerbottom" href="#" target="_blank">Lorem.</a>
+                  <br>powered By:
+                  <a class="a_footerbottom" href="#" target="_blank">team</a>
                 </div>
               </div>
             </div>
