--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <!-- header -->
 
   <header>
-            <nav class="navbar navbar-expand-lg px-4 px-lg-5 bg-brown-mode">
+            <nav class="navbar navbar-expand-lg fixed-top px-4 px-lg-5 bg-brown-mode">
                   <a class="navbar-brand text-uppercase d-flex align-items-center" href="#">
                     <h1 class="fs-5 m-0">
                     <img src="./img/bookstore.jpg" alt="Logo" width="130" height="70" class="d-inline-block rounded-2">
-                    House Of Books</h1>
+                    House Of Book</h1>
                 </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,6 +48,54 @@
     <!-- main -->
     
     <main>
+   <!-- carousel_hero -->
+
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item one active">
+      <div class="container-fluid  h-100  d-flex align-items-center">
+      <div class="container p-5">
+        <span class="text-capitalize mb-1 ps-2 fst-italic">new release</span>
+        <h1 class="h1 fs-1 fw-bold text-uppercase pb-4 pt-4">the woman</h1>
+        <p class="width_1 fw-semibold">From the celebrated author of The Nightingale and The Four Winds comes Kristin Hannah's The Women at once an intimate    portrait of coming of age in a dangerous time and an epic tale of a nation divided.Women can be heroes.</p>
+        <a href="#" class="btn btn-outline-dark">More</a>
+      </div>
+    </div>
+    </div>
+    <div class="carousel-item two">
+      <div class="container-fluid  h-100 d-flex align-items-center ">
+        <div class="container p-5">
+          <span class="text-capitalize mb-1 ps-2 fst-italic">new release</span>
+          <h1 class="h1 fs-1 fw-bold text-uppercase pb-4 pt-4">yellowface</h1>
+          <p class="width_1 fw-semibold">Yellowface is a 2023 novel written by R. F. Kuang.The book was described as a satire of racial diversity in the publishing industry as well as a metafiction about social media,particularly Twitter.Yellowface is Kuang's first venture into literary fiction</p>
+          <a href="#" class="btn btn-outline-dark">More</a>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item three">
+      <div class="container-fluid  h-100 d-flex align-items-center ">
+        <div class="container p-5">
+          <span class="text-capitalize mb-1 ps-2 fst-italic ">new release</span>
+          <h1 class="h1 fs-1 fw-bold text-uppercase pb-4 pt-4">A Study in Drowning
+          </h1>
+          <p class="width_1 fw-semibold">An instant Indie and #1 New York Times bestseller!“Achingly atmospheric and beautifully sharp,A Study in Drowning will draw you in from the first page.</p>
+          <a href="#" class="btn btn-outline-dark" >sign up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <i class="fas fa-less-than fs-5 p-2 text-dark rounded-5 border border-dark"></i>
+    <span class="carousel-control-prev" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next text-center" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <i class="fas fa-greater-than fs-5 mt-3 p-2 text-dark rounded-5 border border-dark"></i>
+    <span class="carousel-control-next" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 
     </main>
 
