--- a/index.html
+++ b/index.html
@@ -9,11 +9,41 @@
 </head>
 <body>
   <!--header-->
-  <header class="container">
-    <img src="https://i.pinimg.com/564x/8b/dd/d0/8bddd07f2dd221b54ae6932fbb28648c.jpg" class=" header w-100 h-25" alt="...">
-  </header>
+  <header>
+  <nav class="navbar navbar-expand-lg fixed-top px-4 px-lg-5 bg-brown-mode">
+    <a class="navbar-brand text-uppercase d-flex align-items-center" href="#">
+      <h1 class="fs-5 m-0">
+      <img src="https://i.pinimg.com/564x/ca/03/cb/ca03cb6692c1520053192066fbfb5578.jpg" alt="Logo" width="70" height="70" class="d-inline-block rounded-2">
+      House Of Book</h1>
+  </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="navbar-nav ms-auto pe-4 py-3 py-lg-0 mb-2 mb-lg-0 text-capitalize justify-content-around fw-semibold div-nav">
+          <a class="nav-item nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-item nav-link active" aria-current="page" href="#">page1</a>
+          <a class="nav-item nav-link active" aria-current="page" href="#">page2</a>
+        <div class="nav-item dropdown">
+          <a class="nav-item nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            page 3
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+      </div>
+          <a class="nav-item nav-link active" aria-current="page" href="#">page4</a>
+  </div>
+  </div>
+        <a href="#" class="btn px-3 d-none d-lg-block button-nav fw-semibold">sign in</a>
+</nav>
+   </header>
 <!--header-->
-
+<main>
+<img src="https://i.pinimg.com/564x/85/49/5e/85495ee60395cbbb0a11cb3582f5f2c4.jpg" class=" header w-100 h-25" alt="...">
 <!--title-->
 <section class="p-1 m-1">
   <h2>NEWS AND EVENTS</h2>
@@ -21,8 +51,8 @@
 <!--title-->
 </br>
 <!--text-->
-<section>
-  <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eos ipsa, in quae repellendus repellat deleniti aliquid esse assumenda asperiores! Minima adipisci, eaque ratione libero dolorem vel velit autem amet!</h5>
+<section class="p-1 m1">
+  <h6><p class="text-muted">Reading books and novels is of the easiest and cheapest ways to travel around the world.</p></h6>
 </section>
 <!--text-->
     <!---cards-->
@@ -31,36 +61,37 @@
     <section class="row">
             <div class="col-4 p-1">
         <div class="card" style="width: 9rem; height: 9rem;">
-            <img src="..." class="card-img-top rounded mx-auto d-block" alt="...">
+            <img src="https://m.media-amazon.com/images/I/61mww2Wl3oL._AC_SX679_.jpg" class="card-img-top rounded mx-auto d-block" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn-primary">Millions of books</a>
             </div>
           </div>
           </div>
           <div class="col-4 p-2">
             <div class="card" style="width: 9rem;height: 9rem;">
-                <img src="..." class="card-img-top rounded mx-auto d-block" alt="...">
+                <img src="https://i.pinimg.com/564x/81/59/87/8159875fa3ff55f6d36bf88339092267.jpg" class="card-img-top rounded mx-auto d-block" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+                 <a href="#" class="btn-primary">seedling survey</a>
                 </div>
               </div>
               </div>
-              <div class="col-4 p-2">
-              <img src="..." class="img d-flex justify-content-end align-items-center" alt="...">
+              <div class="p-2 m-1">
+              <img src="https://i.pinimg.com/736x/f5/9b/e2/f59be28382b9548c40cd274410a21416.jpg" class="rights" style="width: 18rem;height:18rem;" class="d-flex justify-content-end align-items-center" alt="...">
               </div>
               <div class="col-4 p-2">
                 <div class="card" style="width: 9rem;height: 9rem;">
-                    <img src="..." class="card-img-top rounded mx-auto d-block" alt="...">
+                    <img src="https://i.pinimg.com/564x/92/a4/91/92a49115c0841cee71d86678920cca2a.jpg" class="card-img-top rounded mx-auto d-block" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn-primary">Reading challenge</a> 
                     </div>
                   </div>
                   </div>
                   <div class="col-4 p-2">
                     <div class="card" style="width: 9rem; height: 9rem;">
-                        <img src="..." class="card-img-top rounded mx-auto d-block" alt="...">
+                        <img src="https://i.pinimg.com/564x/81/54/87/815487ee970775b0503573f3698f0aa9.jpg" class="card-img-top rounded mx-auto d-block" alt="...">
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn-primary">Friends Invitation</a>
                         </div>
                       </div>
                       </div>
@@ -70,13 +101,75 @@
 </div>
 
 <!--cards-->
+</main>
 
 
 
 
 
+<!-- footer -->
 
+<footer>
 
+  <div class="container-fluid  footer mt-5 pt-5 wow fadeIn bg-brown-mode2" data-wow-delay="0.1s">
+    <div class="container pt-3 pb-5">
+      <div class="row g-5">
+          <div class="col-lg-3 col-md-6 text-dark">
+              <p>Explore worlds beyond your imagination in our curated collection of books.Discover your next adventure within the pages of our diverse     selection of literature.eed your mind and soul with our wide array of captivating novels, biographies, and more.
+              </p>
+              <div class="d-flex text-white text-center">
+                  <a class="btn btn-square rounded-5 me-1" href=""><i class="fab fa-twitter fs-5" aria-hidden="true"></i></a>
+                  <a class="btn btn-square rounded-5 me-1" href=""><i class="fab fa-facebook fs-5" aria-hidden="true"></i></a>
+                  <a class="btn btn-square rounded-5 me-1" href=""><i class="fab fa-youtube fs-5" aria-hidden="true"></i></a>
+                  <a class="btn btn-square rounded-5 me-1" href=""><i class="fab fa-linkedin fs-5" aria-hidden="true"></i></a>
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="text-capitalize d-inline-block border-dark border-3 border-bottom mb-4 pb-2">get in touch</h5>
+            <p>
+              <i class="fa fa-map-marker-alt me-3" aria-hidden="true"></i>united kingdom,london,street 2
+            </p>
+            <p><i class="fa fa-phone-alt me-3" aria-hidden="true"></i>09223344556</p>
+            <p><i class="fa fa-envelope me-3" aria-hidden="true"></i>houseofbooks@example.com</p>
+    </div>
+    <div class="col-lg-3 col-md-6 a_footer">
+            <h5 class="text-capitalize d-inline-block pb-2 border-dark border-3 border-bottom mb-3 justify-content-start ">popular links</h5>
+            <a class="btn w-100 text-start" href=""><i class="fas fa-greater-than"></i>Lorem ipsum</a>
+            <a class="btn w-100 text-start" href=""><i class="fas fa-greater-than"></i>Lorem ipsum </a>
+            <a class="btn w-100 text-start" href=""><i class="fas fa-greater-than"></i>Our Lorem </a>
+            <a class="btn w-100 text-start" href=""><i class="fas fa-greater-than"></i>Lorem Lorem</a>
+            <a class="btn w-100 text-start" href=""><i class="fas fa-greater-than"></i>Lorem dfdg</a>
+    </div>
+    <div class="col-lg-3 col-md-6">
+            <h5 class="text-capitalize d-inline-block border-dark border-3 border-bottom pb-2 mb-4">newsletter</h5>
+            <p>Stay in the loop with our newsletter for exclusive offers, book recommendations.</p>
+            <div class="position-relative mx-auto max_width">
+              <input class="form-control bg-transparent border-dark c_in w-100 py-3 ps-4 pe-5" type="text" placeholder="email">
+              <button type="button" class="btn button-nav_1 py-2 position-absolute top-0 end-0 mt-2 me-2">
+                sign up
+              </button>
+          </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid border-1 border-top copyright border-top-2 pb-2">
+    <div class="container">
+      <div class="row pt-2">
+        <div class="col-md-6 text-center text-md-start pt-2 mb-3 mb-md-0">
+          © <a class="a_footerbottom" href="#">house of books</a>,All rights reserved.
+        </div>
+        <div class="col-md-6 text-center text-md-end">
+          designed By <a class="a_footerbottom" href="#">bookhouse team</a>
+          <br>powered By:
+          <a class="a_footerbottom" href="#" target="_blank">team</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</footer>
+<!--footer-->
 
 
 
