--- a/index.html
+++ b/index.html
@@ -96,9 +96,103 @@
   </button>
   </div>
 
+   <!-- cards -->
 
+   <div class="container mt-5">
+    <div class="text-center d-flex justify-content-center mx-auto mb-5" >
+        <h2 class="h1 fw-bold w-50 text-center">bestselling books ever</h2>
+      </div>
+    <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card bg-warning-subtle border-white card_scale">
+            <div class="d-flex align-items-center mt-5 pt-3">
+              <div class="flex-shrink-0 bg-primary rounded-end">
+                <img src="./img/book (1).jpg" class="card-img-top" alt="book">
+              </div>
+              <h5 class="mb-1 ps-3 text-capitalize">Where the Crawdads Sing by <cite title="Delia Owens">Delia Owens</cite></h5>
+            </div>
+            <div class="card-body">
+              <p class="card-text pt-3 pb-2">owens weaves a haunting and atmospheric narrative set in the marshlands of North Carolina. Through the eyes of the fiercely independent.</p>
+              <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="">More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+            <div class="card bg-warning-subtle border-white card_scale">
+              <div class="d-flex align-items-center mt-5 pt-3">
+                <div class="flex-shrink-0 bg-primary rounded-end">
+                  <img src="./img/normal.jpg" class="card-img-top" alt="book">
+                </div>
+                <h5 class="mb-1 ps-3 text-capitalize">Normal People by<cite title="Sally Rooney"> Sally Rooney</cite></h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text pt-3 pb-2">Rooney's intimate portrayal of love, friendship, and identity resonates deeply in this poignant coming-of-age story. Through the complex relationship.</p>
+                <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="">More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card bg-warning-subtle border-white card_scale">
+              <div class="d-flex align-items-center mt-5 pt-3">
+                <div class="flex-shrink-0 bg-primary rounded-end">
+                  <img src="./img/silent pationt.jpg" class="card-img-top" alt="book">
+                </div>
+                <h5 class="mb-1 ps-3 text-capitalize">The Silent Patient by <cite title="Alex Michaelides">Alex Michaelides</cite></h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text pt-3 pb-2">Michaelides crafts a gripping psychological thriller that will keep readers on the edge of their seats until the final revelation.With its unexpected twists.</p>
+                <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="">More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card bg-warning-subtle border-white card_scale">
+              <div class="d-flex align-items-center mt-5 pt-3">
+                <div class="flex-shrink-0 bg-primary rounded-end">
+                  <img src="./img/the dutch.jpg" class="card-img-top" alt="book">
+                </div>
+                <h5 class="mb-1 ps-3 text-capitalize">The Dutch House by <cite title="Ann Patchett">Ann Patchett</cite></h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text pt-3 pb-2"> Patchett's exquisite storytelling shines in this richly layered family saga spanning five decades.Centered around sibling relationships.</p>
+                <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="">More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card bg-warning-subtle border-white card_scale">
+              <div class="d-flex align-items-center mt-5 pt-3">
+                <div class="flex-shrink-0 bg-primary rounded-end">
+                  <img src="./img/Educated_(Tara_Westover).jpg" class="card-img-top" alt="...">
+                </div>
+                <h5 class="mb-1 ps-3 text-capitalize">Educated by <cite title="Tara Westover">Tara Westover</cite></h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text pt-3 pb-2">Westover's memoir is a powerful testament to the resilience of the human spirit and the transformative power of education.From her upbringing in a strict.</p>
+                <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="#">More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card bg-warning-subtle border-white card_scale">
+              <div class="d-flex align-items-center mt-5 pt-3">
+                <div class="flex-shrink-0 bg-primary rounded-end">
+                  <img src="./img/libary.jpg" class="card-img-top " alt="book">
+                </div>
+                <h5 class="mb-1 ps-3 text-capitalize">The Midnight Library by <cite title="Matt Haig">Matt Haig</cite></h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text pt-3 pb-2">a woman who finds herself at a crossroads, feeling regretful and unfulfilled. When Nora discovers the Midnight Library, a place between.</p>
+                <a class="btn btn-sm btn-outline-dark mt-3 mb-2" href="">More</a>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+ 
+   
 
-
+  
   
   
 
@@ -169,6 +263,8 @@
         </div>
        
       </footer>
+
+      <!-- back to top -->
 
       <a href="#" class="btn btn-md btn-dark  back_up"><i class="fas fa-arrow-up icon"></i></a>
         
