--- a/index.html
+++ b/index.html
@@ -261,8 +261,96 @@
     </section>
 
 
- 
+    <!-- blog post -->
 
+    <div class="container-xxl py-5">
+      <div class="container">
+          <div class="text-center mx-auto w-50 mb-6">
+              <h1 class=" h2 pb-5 mb-4 text-capitalize">our latest blog post</h1>
+            </div>
+            <div class="row">
+              <div class="col-lg-3 col-md-6">
+                  <div class="clap2 rounded position-relative overflow-hidden">
+                      <img class="img-fluid rounded" src="./img/read2.jpg" alt="reading pic">
+                      <div class="text-center p-4">
+                        <h5>Finding Your Reading Niche</h5>
+                        <span>updated 2 days ago</span>
+                      </div>
+                      <div class="clap text-center bg-white p-4">
+                        <h5>Finding Your Reading Niche</h5>
+                        <p>updated 2 days ago</p>
+                        <div class="d-flex justify-content-center">
+                          <a class="btn btn-square button_share btn-light m-1" href=""><i class="fa-solid fa-share" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_heart btn-light m-1" href="#"><i class="fas fa-heart icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_like btn-light m-1" href=""><i class="fas fa-thumbs-up icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_save btn-light m-1" href=""><i class="fas fa-bookmark icon" aria-hidden="true"></i></a>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              <div class="col-lg-3 col-md-6 ">
+                  <div class="clap2 rounded position-relative overflow-hidden">
+                      <img class="img-fluid rounded" src="./img/read1.jpg" alt="readingpic">
+                      <div class="text-center p-4">
+                        <h5>The Benefits of Reading</h5>
+                        <span>updated 2 days ago</span>
+                      </div>
+                      <div class="clap text-center bg-white p-4">
+                        <h5>The Benefits of Reading</h5>
+                        <p>updated 2 days ago</p>
+                        <div class="d-flex justify-content-center">
+                          <a class="btn btn-square button_share btn-light m-1" href=""><i class="fa-solid fa-share" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_heart btn-light m-1" href="#"><i class="fas fa-heart icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_like btn-light m-1" href=""><i class="fas fa-thumbs-up icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_save btn-light m-1" href=""><i class="fas fa-bookmark icon" aria-hidden="true"></i></a>
+                        </div>
+                      </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="clap2 rounded position-relative overflow-hidden">
+                  <img class="img-fluid rounded" src="./img/read3.jpg" alt="reading pic">
+                  <div class="text-center  p-4">
+                    <h5>The Joy of Book Clubs For Everyone</h5>
+                    <span>updated 2 days ago</span>
+                  </div>
+                  <div class="clap text-center bg-white p-4">
+                    <h5>The Joy of Book Clubs For Everyone</h5>
+                    <p>updated 2 days ago</p>
+                    <div class="d-flex justify-content-center">
+                      <a class="btn btn-square button_share btn-light m-1" href=""><i class="fa-solid fa-share" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_heart btn-light m-1" href="#"><i class="fas fa-heart icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_like btn-light m-1" href=""><i class="fas fa-thumbs-up icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_save  btn-light m-1" href=""><i class="fas fa-bookmark icon" aria-hidden="true"></i></a>
+                    </div>
+                  </div>
+          </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="clap2 rounded position-relative overflow-hidden">
+                  <img class="img-fluid rounded" src="./img/reading.jpg" alt="">
+                  <div class="text-center p-4">
+                    <h5>Tips for Effective Reading Habits</h5>
+                    <span>updated 2 days ago</span>
+                  </div>
+                  <div class="clap text-center bg-white p-4">
+                    <h5>Tips for Effective Reading Habits</h5>
+                    <p>updated 2 days ago</p>
+                    <div class="d-flex justify-content-center">
+                      <a class="btn btn-square button_share btn-light m-1" href=""><i class="fa-solid fa-share" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_heart btn-light m-1" href="#"><i class="fas fa-heart icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_like btn-light m-1" href=""><i class="fas fa-thumbs-up icon" aria-hidden="true"></i></a>
+                          <a class="btn btn-square button_save btn-light m-1" href=""><i class="fas fa-bookmark icon" aria-hidden="true"></i></a>
+                    </div>
+                  </div>
+          </div>
+            </div>
+      </div>
+  </div>
+  </div>
+
+
+  
   
 
   
