--- a/index.html
+++ b/index.html
@@ -350,7 +350,61 @@
   </div>
 
 
+  <!-- testimonial carosel -->
   
+  <div class="container-xxl py-5">
+    <div class="container">
+      <div class="text-center mb-5 mx-auto w-50">
+        <h1 class="h1 pb-5 mb-4 text-capitalize">customers say about our services</h1>
+      </div>
+      <div class="row g-5">
+        <div class="col-lg-3 d-none d-lg-block">
+          <div class=" d-flex flex-column gap">
+            <img class="img-fluid pulsing-image w-25 rounded-4 align-self-end" src="./img/book1.jpg" alt="book1">
+             <img class="img-fluid pulsing-image w-25 rounded-4" src="./img/book1.jpg" alt="book1">
+           <img class="img-fluid pulsing-image  w-25 rounded-4 align-self-end" src="./img/book1.jpg" alt="book1">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="./img/testimonial-1.jpg" class="testimonial-img mx-auto" alt="Testimonial 1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h5>John Doe</h5>
+                <h6>from london</h6>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./img/testimonial-2.jpg" class="testimonial-img mx-auto" alt="Testimonial 2">
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h5>Jane Smith</h5>
+                <h6>from italia</h6>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/testimonial-3.jpg" class="testimonial-img mx-auto" alt="Testimonial 3">
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <h5>Michael Johnson</h5>
+                <h6>from irland</h6>
+              </div>
+            </div>
+            <div class="row carousel_button  d-flex justify-content-center mt-4">
+              <button class="border  button_c rounded-4 d-flex justify-content-center align-items-center me-2"  data-bs-target="#carouselExampleInterval" data-bs-slide="prev"><i class="fas fa-chevron-left"></i></button>
+              <button class="border button_c  rounded-4 d-flex justify-content-center align-items-center" data-bs-target="#carouselExampleInterval" data-bs-slide="next"><i class="fas fa-chevron-right"></i></button>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 d-none d-lg-block">
+          <div class= "d-flex flex-column gap">
+            <img class="img-fluid pulsing-image w-25 rounded-4 align-self-end" src="./img/book1.jpg" alt="book1">
+             <img class="img-fluid pulsing-image w-25 rounded-4 " src="./img/book1.jpg" alt="book1">
+           <img class="img-fluid pulsing-image  w-25 rounded-4 align-self-end" src="./img/book1.jpg" alt="book1">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   
 
   
