--- a/home.html
+++ b/home.html
@@ -25,20 +25,20 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav ms-auto pe-4 py-3 py-lg-0 mb-2 mb-lg-0 text-capitalize justify-content-around fw-semibold div-nav">
                         <a class="nav-item nav-link active" aria-current="page" href="./home.html">Home</a>
-                        <a class="nav-item nav-link active" aria-current="page" href="./paje2.html">page1</a>
-                        <a class="nav-item nav-link active" aria-current="page" href="./index.html">page2</a>
+                        <a class="nav-item nav-link active" aria-current="page" href="./paje2.html">Page2</a>
+                        <a class="nav-item nav-link active" aria-current="page" href="./index.html">page3</a>
                       <div class="nav-item dropdown">
                         <a class="nav-item nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          page 3
+                          Items
                         </a>
                         <div class="dropdown-menu">
                           <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="./register.html">Register</a>
                           <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <a class="dropdown-item" href="#">Something else here</a>
+                          <a class="dropdown-item" href="./page4(4)">Something else here</a>
                         </div>
                     </div>
-                        <a class="nav-item nav-link active" aria-current="page" href="#">page4</a>
+                        <a class="nav-item nav-link active" aria-current="page" href="feature5.html">Comment</a>
                 </div>
                 </div>
                       <a href="#" class="btn px-3 d-none d-lg-block button-nav fw-semibold">sign in</a>
