--- a/paje2.html
+++ b/paje2.html
@@ -52,27 +52,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto fs-5">
                 <li class="nav-item">
-                  <a class="nav-link LinkHoverBlue" aria-current="page" href="#">Home</a>
+                  <a class="nav-link LinkHoverBlue" aria-current="page" href="./home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link LinkHoverBlue" href="#">page2</a>
+                  <a class="nav-link LinkHoverBlue" href="./paje2.html">page2</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link LinkHoverBlue" href="#">page3</a>
+                  <a class="nav-link LinkHoverBlue" href="./index.html">page3</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle LinkHoverBlue" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    About us
+                    Items
                   </a>
                   <ul class="dropdown-menu dropdown-color">
-                    <li><a class="dropdown-item LinkHoverBlue" href="#">Photo Album</a></li>
-                    <li><a class="dropdown-item LinkHoverBlue" href="#">Subscription</a></li>
-                    <li><a class="dropdown-item LinkHoverBlue" href="#">who we are</a></li>
-                    <li><a class="dropdown-item LinkHoverBlue" href="#">Publishers</a></li>
+                    <li><a class="dropdown-item LinkHoverBlue" href="#">Action</a></li>
+                    <li><a class="dropdown-item LinkHoverBlue" href="./register.html">Register</a></li>
+                    <li><a class="dropdown-item LinkHoverBlue" href="#">Another action</a></li>
+                    <li><a class="dropdown-item LinkHoverBlue" href="#">something else here</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link LinkHoverBlue" href="#">Contact us</a>
+                  <a class="nav-link LinkHoverBlue" href="feature5.html">Comment</a>
                 </li>
               </ul>
               <button class="btn text-bg-primary SignIn-size nfButton" type="button">SignIn</button>
